@@ -116,7 +116,12 @@
       settings file, and separate values are maintained for saving a single image with 
       the
       <a href="menu_file.htm#hidm_file_saveother">Save Single/Save to Other</a> 
-      command versus other situations.</P>
+      command versus other situations.&nbsp; However, if the data are very noisy and 
+      the image is large, you may find that the contrast is poor when viewing a 
+      zoomed-down image that was saved as bytes, and that increasing these truncation 
+      values does not help much.&nbsp; The solution is to reduce the image before 
+      saving, using the <a href="menu_process.htm#hid_process_reduceimage">Reduce 
+      Image</a> command in the Process menu or the ReduceImage script command.</P>
     <P><B>Save in extended header:</B></P>
     <P>Select whether to save tilt angle, C2 intensity value, stage position, 
       magnification, or dose in the header. The dose is referred to as 'exposure 
