@@ -3,6 +3,12 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+1/3/18: Added menu option and script command to reduce an image in size with
+an antialiasing filter.
+
+1/3/18: Added script command to start Navigator Acquire when the script ends,
+and a Postpone button the the Acquire dialog for setting parameters only.
+
 1/1/18: Expanded SuffixForExtraFile command to provide suffixes for more than
 one extra file to open during Navigator acquisition.
 
@@ -126,7 +132,7 @@ unlinearized values.
 9/16/17: Stopped function for getting dose rate from image mean from getting
 relative gain factor from the wrong buffer (In 3.6).
 
-8/29/17: SEM_3-6-12
+9/12/17: Added ability to align frames from Falcon cameras in SerialEM and
 write command files for aligning with IMOD, just as with K2.
 
 9/12/17: Added script commands for suppressing the check on frame alignment
@@ -144,6 +150,7 @@ and realign until IS is below a threshold, and to leave IS at 0.
 
 8/31/17: Added checks for beam intensity calibrations with 0 intensities.
 
+8/29/17: SEM_3-6-12
 8/29/17: Fixed camera setup dialog opening at its last size (In 3.6).
 
 8/29/17: Turned warning that image shift has not been calibrated for a montage
